change output to bytestream